fix overflow X issue with sidebar

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -19,6 +19,7 @@ section {
   max-width: 1140px;
   margin: auto;
 }
+html,
 ul {
   overflow-x: hidden;
 }
